--- a/apps/landing/src/pages/[...path].astro
+++ b/apps/landing/src/pages/[...path].astro
@@ -3,10 +3,7 @@ import App from "../routes/app";
 import "../index.css";
 
 export function getStaticPaths() {
-  return [
-    { params: { path: undefined } },
-    { params: { path: "company" } },
-  ];
+	return [{ params: { path: undefined } }, { params: { path: "company" } }];
 }
 ---
 
