Revert "more formatting + no more solid-icons (#217)"
This reverts commit 1965363f563341041b1f3197d67adad750905aee.

--- a/apps/landing/src/pages/[...path].astro
+++ b/apps/landing/src/pages/[...path].astro
@@ -3,7 +3,10 @@ import App from "../routes/app";
 import "../index.css";
 
 export function getStaticPaths() {
-	return [{ params: { path: undefined } }, { params: { path: "company" } }];
+  return [
+    { params: { path: undefined } },
+    { params: { path: "company" } },
+  ];
 }
 ---
 
