--- a/apps/configure/src/index.css
+++ b/apps/configure/src/index.css
@@ -9,6 +9,15 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+body.disable-animations * {
+  animation-duration: 0s !important;
+  -webkit-animation-duration: 0s !important;
+  transition:
+    background-color 0s,
+    opacity 0s,
+    color 0s,
+    width 0s,
+    height 0s,
+    padding 0s,
+    margin 0s !important;
+}
